better-routes/tests/trybuild/fail/should-fail-with-invalid-state-2.stderr
error[E0308]: mismatched types
  --> tests/trybuild/fail/should-fail-with-invalid-state-2.rs:15:13
   |
15 |     name => AllRoutes,
   |             ^^^^^^^^^
   |             |
   |             expected `Router<BarState>`, found `Router<FooState>`
   |             expected `Router<BarState>` because of return type
...
18 |         get => get
   |                --- here the type of `r` is inferred to be `Router<FooState>`
   |
   = note: expected struct `Router<BarState>`
              found struct `Router<FooState>`
